namespace DDDNetCore.Domain.Common
{
    public enum EntityActiveStatus
    {
        ACTIVE, 
        INACTIVE
    }
}